examples/Servicemesh_with_GSLB_and_WAF/manifest/bookinfo-gateway-wildcard.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    app: citrix-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/wildcard-cert/tls.crt
      privateKey: /etc/istio/wildcard-cert/tls.key
    hosts:
    - "bookinfo.appcluster.example.com"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bookinfo.appcluster.example.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - "bookinfo.appcluster.example.com"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /
    route:
    - destination:
        host: productpage
---
