examples/Servicemesh_with_GSLB_and_WAF/manifest/httpbin-gateway-wildcard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    app: citrix-ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/wildcard-cert/tls.crt
      privateKey: /etc/istio/wildcard-cert/tls.key
    hosts:
    - "httpbin.appcluster.example.com"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.appcluster.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.appcluster.example.com"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
